<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sölvesborgs Meny (Gratis)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_restaurant">DisplayRestaurant</string>
    <string name="address">Adress:</string>
    <string name="number">Telefon:</string>
    <string name="url">Hemsida:</string>
    <string name="daily_text">Dagens:</string>
    <string name="menu_button">Meny</string>
    <string name="daily_button">Dagens</string>
    <string name="title_activity_display_menu">Meny</string>
    <string name="pricetag">:-</string>
    <string name="numberspace">. </string>
    <string name="title_activity_display_times">DisplayTimes</string>
    <string name="monday">Måndag</string>
    <string name="tuesday">Tisdag</string>
    <string name="wednesday">Onsdag</string>
    <string name="thursday">Torsdag</string>
    <string name="friday">Fredag</string>
    <string name="saturday">Lördag</string>
    <string name="sunday">Söndag</string>
    <string name="search_hint">Sök...</string>
    <string name="menu_add_string">Lägg Till</string>
    <string name="title_activity_shop_list">Inköpslista</string>
    <string name="shop_list">Inköpslista</string>
    <string name="shop_list_added">Extra: </string>
    <string name="shop_list_removed">Utan: </string>
    <string name="clear_button">Rensa lista</string>
    <string name="shop_list_clear">Rensa listan</string>
    <string name="shop_list_to_restaurant">Till Restaurangen</string>
    <string name="menu_remove_string">Ta Bort</string>
    <string name="menu_added_string">Ändra Extra</string>
    <string name="menu_removed_string">Ändra Utan</string>
    <string name="edit">Ändra</string>
    <string name="cancel">Avbryt</string>
    <string name="total_price">Uppskattat totalt pris: </string>
    <string name="title_activity_display_daily">DisplayDaily</string>
    <string name="next_week">Nästa vecka</string>
    <string name="prev_week">Föregående vecka</string>
    <string name="current_week">Nuvarande vecka</string>
    <string name="prev">Föregående</string>
    <string name="next">Nästa</string>
    <string name="update_database">Uppdatera meny</string>
    <string name="download_message_positive">Det finns en ny version av menyn, vill du ladda ner den?</string>
    <string name="download">Ladda ner</string>
    <string name="cancel">Avbryt</string>
    

</resources>
